Closed Bug 406959 Opened 17 years ago Closed 17 years ago

IAccessible2::WindowHandle property causes COM server exception when called out of process

Categories

(Core :: Disability Access APIs, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: mick, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b2pre) Gecko/2007120405 Minefield/3.0b2pre

Using NVDA screen reader this property always causes an exception. The first time it is called the call blocks for about 3 or so seconds and then causes the exception. Subsiquent calls cause the exception with no delay.
As NVDA uses IAccessible2 out of process for most things (excluding virtual buffers in future), I am unsure as to whether this property fails in process.
NVDA is able to call all the other supported IAccessible2 properties with no exceptions, only windowHandle causes problems. Windowhandle is also called the same way as all the other properties.
This bug has occured as far as I am aware ever since IAccessible2::WindowHandle was implemented. I did once report it was fixed though that was an error on my part with using a revision of NVDA that did not call IAccessible2::WindowHandle.
 NVDA is running in Python 2.5.1, using comtypes 0.4.1 to access COM interfaces. 
As I am still waiting for Accessibility Probe to become public, I can't test if the windowHandle property works ok in process / out of process with an accessibility testing tool.


Reproducible: Always
Michael, how can I reproduce it?
Assignee: aaronleventhal → surkov.alexander
Blocks: fox3access
Blocks: ia2
Keywords: access
On my system if I Open Firefox3 and then run the test program,  it finds the firefox window, gets the client IAccesible fine, gets the IAccessible2 fine, calls IAccessible2::States fine (to prove it works for other properties) but then fails on IAccessible2::WindowHandle
When I run compiled program then I get an error:

Error querying service to IAccessible2 from IAccessible, code -2147221163

Michael, any idea?
(In reply to comment #3)
> When I run compiled program then I get an error:
> 
> Error querying service to IAccessible2 from IAccessible, code -2147221163
> 
> Michael, any idea?
One of two things: 1. the program depends on the fact that only one program with an app window of MozillaUIWindowClass be running as it just uses the FindWindow win32 API call (so this would include not having Thunderbird or something else open). It was possibly trying to do things on the wrong app window.  2. You need to have an IAccessible2 proxy dll registered in Windows to actually have IAccessible2 working. If you don't have an IAccessible2 proxy dll I can provide you with one. Sorry, I just assumed you would have had this.
Attached patch patchSplinter Review
Attachment #291837 - Flags: review?(aaronleventhal)
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #291837 - Flags: review?(aaronleventhal) → review+
Attachment #291837 - Flags: approvalM10?
Comment on attachment 291837 [details] [diff] [review]
patch

a=drivers for when trunk opens after Fx3 Beta 2 freeze
Attachment #291837 - Flags: approvalM10?
Attachment #291837 - Flags: approvalM10-
Attachment #291837 - Flags: approval1.9+
Checked in for Surkov. Mick, this will be in the Dec 11, 2007 builds
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Verified using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b3) Gecko/2008020514 Firefox/3.0b3
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: