Bug 406959. IAccessible2::WindowHandle property causes COM server exception when called out of process. Patch by surkov. r=aaronlev, a=beltzner